# SFUSION

./: README.md  pyproject.toml  requirements.txt  sfusion.py
config/: settings.json
locale/: en.json  pt_BR.json
locale_backend/: en.json  pt_BR.json
src/: main_controller.py
src/controllers/: info_controller.py  map_controller.py  sources_controller.py
src/core/: app_builder.py  map_renderer.py
src/domain/: app_state.py  entities.py
src/services/: data_importer.py  map_importer.py  persistence.py
src/utils/: config.py  i18n.py
ui/: main_window.py
ui/editor/: editor_panel.py
ui/map/: info_panel.py  map_view.py
ui/sources/: sources_panel.py
